# archetypeSuite

./: .dockerignore  .env.example  .env.prod.example  .gitignore  CLAUDE.md  Caddyfile.example  Dockerfile.api  Makefile  PLAN-LANZAMIENTO.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
api/: __init__.py  main.py  serialization.py  store.py  transform.py
api/routers/: analyze.py  datasets.py  runs.py
deploy/: cloudflared-behaviotype.service
knowledge_database/: methodology_v1.md
sample_data/: bienestar_digital.csv  customers.csv  generate_bienestar_digital.py
src/agents/: graph.py  routing.py
src/clustering/: evaluator.py  executor.py  registry.py
src/config/: constants.py  settings.py
src/core/: evidence.py  export.py  quality.py
src/data/: column_filter.py  ingest.py  k_optimizer.py  preprocess_strategy.py  preprocessor.py  profiler.py
src/llm/: chat_agent.py  chat_tools.py  (+5 more)
tests/: conftest.py  test_api.py  test_chat_agent.py  test_clustering.py  test_column_filter.py  test_column_selection_node.py  test_data_ingest.py  test_data_qa.py  test_evidence.py  test_graph.py  test_group_profile.py  test_ingest_robustness.py  test_k_optimizer.py  test_methodology.py  test_pipeline_e2e.py  test_preprocess_node.py  test_preprocess_strategy.py  test_preprocessor.py  test_profiler.py  test_quality.py  test_refinement_node.py  test_robustez.py
web/: .dockerignore  .env.example  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
(+70 files in other folders)
