[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "archetype-suite"
version = "0.1.0"
description = "Agentic clustering pipeline for generating archetypes from tabular data"
requires-python = ">=3.9"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-core>=0.2.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "openpyxl>=3.1.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
